--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "react-table": "^7.8.0",
     "redux": "^4.2.1"
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^1.0.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
