--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "redux": "^4.2.1"
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^1.0.3"
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
   },
   "scripts": {
     "start": "react-scripts start",
